2008-04-04  Dan Winship  <danw@gnome.org>

	* libsoup/soup-message.c: add a new signal "wrote-body-data" to
	address the problem that "wrote-chunk" is not usable for progress
	info (especially with non-chunked encoding). #525101, suggested by
	Christian Kellner.

	* libsoup/soup-message-io.c (write_data): emit wrote-body-data as
	appropriate.
	(io_write): update so that (a) Content-Length writes can be done
	in multiple chunks (as long as the caller explicitly sets the
	Content-Length header beforehand), and (b) the body data doesn't
	get copied an extra time. Based on a patch from Christian.

	* libsoup/soup-message-client-io.c (get_request_headers): Don't
	update the Content-Length header if it's already set, even if it
	doesn't match the (current) body length.

	* tests/chunk-test.c: test some chunk-encoding-related behavior

2008-04-03  Dan Winship  <danw@gnome.org>

	Be more aggressive about closing unused persistent connections
	when needed, to avoid slow load times in WebKit.

	* libsoup/soup-session-async.c (run_queue): Remove the
	"try_pruning" flag from here and from all the callers, and
	*always* try pruning idle connections if it would help.

	* libsoup/soup-session.c (soup_session_try_prune_connection):
	Rather than only closing a single connection, close all idle
	connections.

2008-03-29  Dan Winship  <danw@gnome.org>

	* libsoup/soup-message.h (SoupMessage): de-constify
	msg->reason_phrase; it's no more const than any other struct
	field.

	* libsoup/soup-message.c (finalize)
	(soup_message_cleanup_response, soup_message_set_status)
	(soup_message_set_status_full): don't need to cast reason_phase to
	non-const when freeing it now

	* libsoup/soup-message-client-io.c (parse_response_headers):
	Likewise, remove reason-phrase non-const casts

2008-03-29  Dan Winship  <danw@gnome.org>

	* libsoup/soup-date.c (parse_day): fix the test for no-day-parsed
	(parse_year): likewise fix the test for no-year-parsed